create github pages

--- a/page1.html
+++ b/page1.html
@@ -47,7 +47,7 @@
                          <img src="assets/images/whatsapp-image-2019-12-06-at-2.53.34-am-144x158.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-primary display-4" href="https://mobirise.com">
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">
                         HEADQUARTERS OF CHRIST</a></span>
             </div>
         </div>
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-rXBggvEVr0" id="gallery3-e">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rXBggvEVr0" id="gallery3-e">
 
     
 
