create github pages

--- a/page1.html
+++ b/page1.html
@@ -74,7 +74,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="mbr-gallery mbr-slider-carousel cid-rXBggvEVr0" id="gallery3-e">
+<section class="engine"><a href="https://mobirise.info/b">how to create a site for free</a></section><section class="mbr-gallery mbr-slider-carousel cid-rXBggvEVr0" id="gallery3-e">
 
     
 
