create github pages

--- a/headquartersofchrist.html
+++ b/headquartersofchrist.html
@@ -67,15 +67,14 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-mobile2 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 242, 149);"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#top"><span class="mbri-mobile2 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 242, 149);"></span>
                     
-                    Try It Now!
-                </a></div>
+                    SOCIAL MEDIA PLATFORM</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-qTkA127IK8 mbr-parallax-background" id="header2-1">
 
     
 
