--- a/page1.html
+++ b/page1.html
@@ -65,15 +65,14 @@
                         About Us
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="https://mobirise.com"><span class="mbri-mobile2 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 242, 149);"></span>
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-primary display-4" href="#top"><span class="mbri-mobile2 mbr-iconfont mbr-iconfont-btn" style="color: rgb(249, 242, 149);"></span>
                     
-                    Try It Now!
-                </a></div>
+                    SOCIAL MEDIA PLATFORM</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section class="mbr-social-feed loading" id="feed-r" data-facebook="" data-facebooktoken="EAAE777VYAAMBAKL2Lj9LmMgIHawyY6uxQAluZCK4e0qXMrgjFmZBGip9BVUO18N7GKBGo7CT0OKVFPYfnFOjgNlr3xKLlZAnAsc77HfO1AEH8RZATMtW893lVphbvC9IKrohCyjb8Itk2JZBGIzRi5GyfSsMK9o5BKBUtbZBHy7QZDZD" data-twitter="" data-posts="3" data-youtube="https://www.youtube.com/channel/UC8fzo_3sE4DHBAMz20T8FiA" data-rv-view="32" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="mbr-social-feed loading" id="feed-r" data-facebook="" data-facebooktoken="EAAE777VYAAMBAKL2Lj9LmMgIHawyY6uxQAluZCK4e0qXMrgjFmZBGip9BVUO18N7GKBGo7CT0OKVFPYfnFOjgNlr3xKLlZAnAsc77HfO1AEH8RZATMtW893lVphbvC9IKrohCyjb8Itk2JZBGIzRi5GyfSsMK9o5BKBUtbZBHy7QZDZD" data-twitter="" data-posts="3" data-youtube="https://www.youtube.com/channel/UC8fzo_3sE4DHBAMz20T8FiA" data-rv-view="32" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     
     <img class="social-feed-container-loading" alt="" src="assets/images/loading.svg">
     <div class="social-feed-container">
